--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+UserSettings/EditorUserSettings.asset
+
+.idea/.idea.SocialMediaTycoon/.idea/
